# DogBlog

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dogblog/: celery.py  middleware.py  settings.py  storage.py  tasks.py  urls.py  utils.py
dogblog/article/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dogblog/article/migrations/: 0001_initial.py  0002_alter_article_cat_alter_article_tags.py  0002_alter_article_content.py  0002_alter_article_options_article_slug_and_more.py  0003_alter_article_slug.py  0003_article_author.py  0003_viewcount.py
dogblog/article/templates/article/: create.html  delete.html  detail.html  index.html  update.html
dogblog/comments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dogblog/comments/migrations/: 0001_initial.py
dogblog/comments/templates/comments/: create.html  delete.html  update.html
dogblog/feedback/: admin.py  apps.py  email.py  forms.py  models.py  urls.py  views.py
dogblog/feedback/migrations/: 0001_initial.py
dogblog/feedback/templates/feedback/: feedback.html  feedback_email.html
dogblog/locale/ru/LC_MESSAGES/: django.mo  django.po
dogblog/templates/: base.html  index.html
dogblog/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
dogblog/users/migrations/: 0001_initial.py
dogblog/users/templates/users/: password_change.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html
